--- a/Aier360/Controllers/我/Mine.storyboard
+++ b/Aier360/Controllers/我/Mine.storyboard
@@ -1450,6 +1450,93 @@
             </objects>
             <point key="canvasLocation" x="-857" y="361"/>
         </scene>
+        <!--Favour List View Controller-->
+        <scene sceneID="232-Ur-UQW">
+            <objects>
+                <viewController storyboardIdentifier="ZXFavourListViewController" id="lTa-tw-gFH" customClass="ZXFavourListViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="8Jr-qc-Z8H"/>
+                        <viewControllerLayoutGuide type="bottom" id="KnR-nl-sZd"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Ie6-9e-p6n">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="JTQ-cH-5iw">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="30" minimumInteritemSpacing="30" id="1lA-R0-Tqb">
+                                    <size key="itemSize" width="50" height="70"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="15" minY="15" maxX="15" maxY="15"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="VKM-xS-tpf" customClass="ZXBaseCollectionViewCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="70"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WPQ-rK-Ski">
+                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="50" id="DS6-qn-xBb"/>
+                                                    </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRaidus">
+                                                            <integer key="value" value="5"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                                    </userDefinedRuntimeAttributes>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dma-pC-vqa">
+                                                    <rect key="frame" x="0.0" y="50" width="50" height="20"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="dma-pC-vqa" secondAttribute="bottom" id="94t-UK-IBY"/>
+                                            <constraint firstItem="WPQ-rK-Ski" firstAttribute="leading" secondItem="VKM-xS-tpf" secondAttribute="leading" id="B7o-PQ-a0D"/>
+                                            <constraint firstAttribute="trailing" secondItem="dma-pC-vqa" secondAttribute="trailing" id="Vht-Lh-g7m"/>
+                                            <constraint firstAttribute="trailing" secondItem="WPQ-rK-Ski" secondAttribute="trailing" id="dlm-xI-iPR"/>
+                                            <constraint firstItem="WPQ-rK-Ski" firstAttribute="top" secondItem="VKM-xS-tpf" secondAttribute="top" id="jVE-Bt-0rD"/>
+                                            <constraint firstItem="dma-pC-vqa" firstAttribute="top" secondItem="WPQ-rK-Ski" secondAttribute="bottom" id="vPk-NZ-awh"/>
+                                            <constraint firstItem="dma-pC-vqa" firstAttribute="leading" secondItem="VKM-xS-tpf" secondAttribute="leading" id="xgj-5W-uKT"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="WPQ-rK-Ski" id="Y5v-Pb-b5f"/>
+                                            <outlet property="titleLabel" destination="dma-pC-vqa" id="uHJ-C5-8wJ"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="lTa-tw-gFH" id="oYt-0c-q5n"/>
+                                    <outlet property="delegate" destination="lTa-tw-gFH" id="STW-Ms-mOf"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="JTQ-cH-5iw" firstAttribute="top" secondItem="Ie6-9e-p6n" secondAttribute="top" id="CIa-My-wZA"/>
+                            <constraint firstItem="JTQ-cH-5iw" firstAttribute="leading" secondItem="Ie6-9e-p6n" secondAttribute="leading" id="So4-B2-YGQ"/>
+                            <constraint firstItem="KnR-nl-sZd" firstAttribute="top" secondItem="JTQ-cH-5iw" secondAttribute="bottom" id="Xno-gx-BcL"/>
+                            <constraint firstAttribute="trailing" secondItem="JTQ-cH-5iw" secondAttribute="trailing" id="hyL-hj-HR1"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="JTQ-cH-5iw" id="BQ4-Fw-00S"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SJs-O7-8QT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-857" y="1034"/>
+        </scene>
         <!--User Dynamic List View Controller-->
         <scene sceneID="b9Q-cV-SYF">
             <objects>
