--- a/Aier360/Controllers/我/Mine.storyboard
+++ b/Aier360/Controllers/我/Mine.storyboard
@@ -218,6 +218,7 @@
                     <connections>
                         <outlet property="tableView" destination="iQc-Ah-RSW" id="X3Q-fJ-6hM"/>
                         <segue destination="9bD-PG-Pl3" kind="show" identifier="settings" id="MoE-nE-zWW"/>
+                        <segue destination="nbe-ZZ-xhg" kind="show" identifier="collection" id="vrp-mm-eZc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BS4-dH-jMy" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -371,6 +372,119 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XGa-Ze-Bao" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="519" y="1135"/>
+        </scene>
+        <!--Collection View Controller-->
+        <scene sceneID="M9S-pC-HO8">
+            <objects>
+                <viewController storyboardIdentifier="ZXCollectionViewController" id="nbe-ZZ-xhg" customClass="ZXCollectionViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="hyz-7B-1rH"/>
+                        <viewControllerLayoutGuide type="bottom" id="2Kh-Om-UHT"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="RxK-iv-rgp">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="dM9-gm-y5X">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ZXCollectionCell" id="kev-Ze-DMY" customClass="ZXCollectionCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="kev-Ze-DMY" id="G0v-XI-vev">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uWs-Rz-Yew">
+                                                    <rect key="frame" x="15" y="12" width="25" height="25"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="25" id="Nhk-Xc-RBO"/>
+                                                        <constraint firstAttribute="width" constant="25" id="vF1-5O-z9X"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4kA-Pv-Ngc">
+                                                    <rect key="frame" x="55" y="12" width="42" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="kyc-sq-NeT"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="b3z-94-Iwv">
+                                                    <rect key="frame" x="485" y="12" width="100" height="75"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="100" id="Knp-vC-P2g"/>
+                                                        <constraint firstAttribute="height" constant="75" id="wXW-DH-wD3"/>
+                                                    </constraints>
+                                                    <connections>
+                                                        <outletCollection property="fd_collapsibleConstraints" destination="Knp-vC-P2g" id="78d-kl-2rb"/>
+                                                        <outletCollection property="fd_collapsibleConstraints" destination="Kxc-LM-ZPL" id="DLu-FW-BqD"/>
+                                                    </connections>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="dsasdasdasdasdasdasdasdadasddsasdasdasdasdasdasdasdadasddsasdasdasdasdasdasdasdadasd" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uVo-6O-BR1" customClass="MLEmojiLabel">
+                                                    <rect key="frame" x="55" y="33" width="422" height="37"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="spc-KG-nra">
+                                                    <rect key="frame" x="55" y="70" width="33" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="ZO2-WC-FGA"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" red="0.70196078431372544" green="0.69019607843137254" blue="0.6588235294117647" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstItem="4kA-Pv-Ngc" firstAttribute="leading" secondItem="spc-KG-nra" secondAttribute="leading" id="00B-GJ-tzJ"/>
+                                                <constraint firstItem="4kA-Pv-Ngc" firstAttribute="top" secondItem="uWs-Rz-Yew" secondAttribute="top" id="2Lw-Al-tld"/>
+                                                <constraint firstItem="uWs-Rz-Yew" firstAttribute="top" secondItem="G0v-XI-vev" secondAttribute="top" constant="12" id="8nJ-He-c6i"/>
+                                                <constraint firstItem="4kA-Pv-Ngc" firstAttribute="leading" secondItem="uWs-Rz-Yew" secondAttribute="trailing" constant="15" id="FrE-Cg-47g"/>
+                                                <constraint firstItem="uVo-6O-BR1" firstAttribute="top" secondItem="4kA-Pv-Ngc" secondAttribute="bottom" id="Hum-KA-6pF"/>
+                                                <constraint firstItem="b3z-94-Iwv" firstAttribute="leading" secondItem="uVo-6O-BR1" secondAttribute="trailing" constant="8" id="Kxc-LM-ZPL"/>
+                                                <constraint firstAttribute="bottom" secondItem="spc-KG-nra" secondAttribute="bottom" constant="8" id="Vs6-R0-6Qw"/>
+                                                <constraint firstItem="uWs-Rz-Yew" firstAttribute="leading" secondItem="G0v-XI-vev" secondAttribute="leading" constant="15" id="dkQ-fy-zjX"/>
+                                                <constraint firstAttribute="trailing" secondItem="b3z-94-Iwv" secondAttribute="trailing" constant="15" id="giN-zA-T0w"/>
+                                                <constraint firstItem="uVo-6O-BR1" firstAttribute="leading" secondItem="4kA-Pv-Ngc" secondAttribute="leading" id="hvm-gM-7Y6"/>
+                                                <constraint firstItem="b3z-94-Iwv" firstAttribute="top" secondItem="G0v-XI-vev" secondAttribute="top" constant="12" id="wVW-Kv-Tax"/>
+                                                <constraint firstItem="spc-KG-nra" firstAttribute="top" secondItem="uVo-6O-BR1" secondAttribute="bottom" id="zkd-vO-fEe"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <outlet property="contentImage" destination="b3z-94-Iwv" id="I6y-jF-ZmH"/>
+                                            <outlet property="emojiLabel" destination="uVo-6O-BR1" id="udt-HP-xVP"/>
+                                            <outlet property="headImg" destination="uWs-Rz-Yew" id="01z-w9-Q6x"/>
+                                            <outlet property="nameLabel" destination="4kA-Pv-Ngc" id="2w4-T1-Lme"/>
+                                            <outlet property="timeLabel" destination="spc-KG-nra" id="TJp-0G-blj"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="nbe-ZZ-xhg" id="fxG-qU-f31"/>
+                                    <outlet property="delegate" destination="nbe-ZZ-xhg" id="RKq-ez-9Lt"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="dM9-gm-y5X" firstAttribute="leading" secondItem="RxK-iv-rgp" secondAttribute="leading" id="62L-Df-usw"/>
+                            <constraint firstItem="2Kh-Om-UHT" firstAttribute="top" secondItem="dM9-gm-y5X" secondAttribute="bottom" id="VKY-WH-19U"/>
+                            <constraint firstItem="dM9-gm-y5X" firstAttribute="top" secondItem="RxK-iv-rgp" secondAttribute="top" id="XKX-ev-zgA"/>
+                            <constraint firstAttribute="trailing" secondItem="dM9-gm-y5X" secondAttribute="trailing" id="ZU0-yo-xG8"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="dM9-gm-y5X" id="9zt-JZ-Yix"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AOp-Oq-xr6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="519" y="1838"/>
         </scene>
         <!--Features View Controller-->
         <scene sceneID="RVB-zO-ltY">
